--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@mui/base": "^5.0.0-alpha.105",
     "@mui/material": "^5.10.10",
     "@mui/styled-engine-sc": "^5.10.6",
+    "@mui/system": "^5.10.16",
     "@mui/x-date-pickers": "^5.0.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
