--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/base": "^5.0.0-alpha.105",
+    "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.10",
     "@mui/styled-engine-sc": "^5.10.6",
     "@mui/system": "^5.10.16",
@@ -19,6 +20,8 @@
     "@types/react-dom": "^18.0.6",
     "axios": "^1.1.3",
     "dayjs": "^1.11.6",
+    "i": "^0.3.7",
+    "npm": "^9.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
