--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "start": "node dist/app.js",
-    "dev": "nodemon dist/app.js",
+    "dev": "nodemon src/app.ts ",
     "watch": "tsc -w ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
